# transformers-template

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
config/: training_args.yaml
dataloaders/: example_dataloader.py
datasets/: example_dataset.py
models/pretrained_model/: pretrained_model.py  pretrained_model_config.py
processing/: my_processor.py
src/: __init__.py
src/models/pretrained_model/: pretrained_model.py
src/training/preatrained_model/: train.py
training/preatrained_model/: train.py  training_args.yaml
utils/: __init__.py  training_args.py
