[project]
name = "huggingface-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.0",
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "peft>=0.15.2",
    "toml>=0.10.2",
    "transformers[torch]>=4.52.4",
]
[tool.uv]
no-build-isolation-package = ['flash-attn']